Bug 427882 - Lock screen password field and logout options on a multi-screen setup are always highlighted on the left screen
Summary: Lock screen password field and logout options on a multi-screen setup are alw...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.21.4
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: multiscreen, usability
Depends on:
Blocks:
 
Reported: 2020-10-17 17:13 UTC by Claudius Ellsel
Modified: 2021-04-13 12:11 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudius Ellsel 2020-10-17 17:13:34 UTC
SUMMARY
-> See title

STEPS TO REPRODUCE
1. Have a multi-screen setup with two screens for example.
2. Lock the session.
3. Type in the password to sign in again.

OBSERVED RESULT
The password field on the left screen is used, although the mouse is on the right one. Happens also when the screen turned black, one moves the mouse on the right screen and thus the password field gets shown on the right screen only. When typing, the left screen password field is used, though.

EXPECTED RESULT
Use the password field on the screen where the mouse is.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.20.0
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Kernel Version: 5.8.14-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Xeon® CPU E3-1225 v3 @ 3.20GHz
Memory: 11.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics P4600/P4700

ADDITIONAL INFORMATION
A similar behavior happens with the overlay that gets shown to shutdown, logout etc. There also always the items on the left screen are highlighted (might be a different problem, tell me whether I should file a separate report for that).

Also I am not sure whether the product and component I selected are right. Please correct that if it is wrong.
Comment 1 Zamundaaa 2021-01-10 14:41:27 UTC
Can confirm; clicking on password fields doesn't change the focus, it always stays on the left screen.

Ideally I think that the multiple views of lockscreen and logout-greeter should completely behave as one (if you type in the password it should appear in all text fields and it should look focused for all, the focused logout option should look focused on all the views) but that is probably out of scope for this bug report.
Comment 2 Claudius Ellsel 2021-01-10 16:30:25 UTC
Another option might be to go the "GNOME way" and have those stuff only appear on one screen (they also achieve this with their displaymanager while SDDM just mirrors the screen and doesn't know about orientation or other things). But yes, those things can be probably better discussed elsewhere. Feel free to link that here if you start a discussion, then I can follow up :)
Comment 3 Toralf Förster 2021-01-23 10:39:32 UTC
I do suffer from this in a slightly different manner:

My docked ThinkPad has a closed LID, an external monitor is used (as the only one) - and I do have to move the mouse now to get the password prompt at the external monitor.
Comment 4 Aleix Pol 2021-04-07 15:40:21 UTC
Launching kscreenlocker_greet by hand (with and without --testing) makes it work as expected. I imagine it's an issue with how kwin treats kscreenlocker separately.
Comment 5 Bug Janitor Service 2021-04-07 16:56:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/837
Comment 6 Aleix Pol 2021-04-09 12:18:44 UTC
Git commit 2894913f9362a8b5bb826532de032132711e4a9c by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 09/04/2021 at 12:18.
Pushed by apol into branch 'master'.

lockscreen: also activate lock screen windows

We are running a slightly different code path, make sure that we still
honour conventions like screen focus.

M  +6    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/2894913f9362a8b5bb826532de032132711e4a9c
Comment 7 Aleix Pol 2021-04-13 12:11:39 UTC
Git commit a8a4c9a881ecd57327b0c35f723292772f4537f3 by Aleix Pol.
Committed on 13/04/2021 at 12:11.
Pushed by apol into branch 'Plasma/5.21'.

lockscreen: also activate lock screen windows

We are running a slightly different code path, make sure that we still
honour conventions like screen focus.

Cherry-pick of 2894913f9362a8b5bb826532de032132711e4a9c

M  +6    -0    input.cpp

https://invent.kde.org/plasma/kwin/commit/a8a4c9a881ecd57327b0c35f723292772f4537f3