lockscreen: also activate lock screen windows

We are running a slightly different code path, make sure that we still
honour conventions like screen focus.

BUG: 427882

Cherry-pick of 2894913f9362a8b5bb826532de032132711e4a9c